# snippets

./: .gitignore  LICENCE.md  README.md
apparmor/: usr.sbin.tinc  usr.sbin.tincd  usr.sbin.tincd.2
docker/: cheatsheet.md
dockerfiles/: python-poetry-dev-env.Dockerfile
examples/taskfile-for-podman-python-poetry-dev-env/: Taskfile.yml
examples/taskfile-for-podman-vite-and-vuejs/: .gitignore  README.md  Taskfile.yml
libcst/: pyproject.toml
libcst/examples/: dumped_route_example.py  route_example_after.py  (+5 more)
libcst_snippets/: .libcst.codemod.yaml  README.md  pyproject.toml
libcst_snippets/codemods/: route_redecorator.py  sa_annotate_session_codemod.py  sa_column_to_mapped.py  sa_common.py
libcst_snippets/dumped_cst_examples/: dumped_sa_example.py  sa_mapped.py
libcst_snippets/fixed_examples/: sa_mapped.py
libcst_snippets/fixup_examples/: sa_example.py
libcst_snippets/tests/: test_route_redecorator.py  test_route_transformer.py  test_sa_annotate_session_codemod.py  test_sa_column_to_mapped.py
libcst_snippets/utils/: print_cst.py
libvirt/: block-device-passthrough.md
m365-mover/: README.md  mover.py  pyproject.toml
pfsense/: cheatsheet.md
salt/: firefox_from_moz_ppa.sls  openssh_cve_2024_6387.sls  remove-all-directories-matching-glob.md  salt_yaml_to_csv.py
samba/: cheatsheet.md  ldbsearch_to_csv.py
shell/: delete_last_mod_gt_1y.sh  make_old_readonly.sh  no-docker-compose-hyphen.bashrc  project-specific.bashrc  schedule_shutdown.sh  unattended_release_upgrade.sh
sql/: reset_sequences_based_on_max.sql
wagtail/: ensure_superuser.py
(+3 files in other folders)
