[tool.poetry]
name = "libcst-snippets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
libcst = "^1.4.0"
pytest = "^8.2.1"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = ["."]

[tool.black]
extend-exclude = """(
    ^/fixed_examples/.*
    | ^/fixup_examples/.*
    | ^/dumped_cst_examples/.*
 )"""